--- a/test/Soenneker.Enums.EventType.Tests/Soenneker.Enums.EventType.Tests.csproj
+++ b/test/Soenneker.Enums.EventType.Tests/Soenneker.Enums.EventType.Tests.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Enums.EventType.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Enums.EventType.csproj" />
     </ItemGroup>
 
 </Project>
