--- a/src/Soenneker.Enums.EventType.csproj
+++ b/src/Soenneker.Enums.EventType.csproj
@@ -36,6 +36,9 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-        <PackageReference Include="Soenneker.SmartEnum.Named" Version="3.0.4" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="Intellenum" Version="1.0.6" />
     </ItemGroup>
 </Project>
